# indexrs

./: .djlintrc  .gitignore  .stylelintrc.json  CLAUDE.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: fzf-recipes.md
docs/design/: fzf-interface.md  indexing-system.md  mcp-interface.md  multi-repo.md  risks-and-tradeoffs.md  web-interface.md
docs/plans/: 2026-02-27-binary-detection.md  2026-02-27-bounded-compaction.md  2026-02-27-bounded-index-files.md  2026-02-27-cli-skeleton.md  2026-02-27-content-store.md  2026-02-27-crash-recovery.md  2026-02-27-directory-walker.md  2026-02-27-disk-format-reader-intersection.md  2026-02-27-file-watcher.md  2026-02-27-foundational-types.md  2026-02-27-git-change-detection.md  2026-02-27-hybrid-change-detector.md  2026-02-27-language-detection.md  2026-02-27-m4-ascii-casefold-trigrams.md  2026-02-27-m4-candidate-verification.md  2026-02-27-m4-query-parser.md  2026-02-27-m4-query-planner.md  2026-02-27-m4-result-formatting.md  2026-02-27-m4-result-ranking.md  2026-02-27-m4-trigram-query-extraction.md  2026-02-27-m5-fzf-cli-interface.md  2026-02-27-metadata-index.md  2026-02-27-multi-segment-query.md  2026-02-27-segment-manager.md  2026-02-27-segment-writer.md  2026-02-27-tombstone-bitmap.md  2026-02-27-trigram-extraction-and-posting-lists.md  2026-02-27-varint-codec.md  2026-02-27-workspace-and-deps.md  2026-02-28-daemon-handler-wiring.md  2026-02-28-daemon-indexing-service.md  2026-02-28-early-termination-result-budget.md  2026-02-28-fix-daemon-color-output.md  2026-02-28-hhc81-parallel-candidate-verification.md  2026-02-28-hhc82-candidate-ordering.md  2026-02-28-on-demand-daemon-startup.md  2026-02-28-parallel-compaction-decompress.md  2026-02-28-parallel-cross-segment-search.md  2026-02-28-parallel-git-subprocesses.md  2026-02-28-parallel-multi-segment-indexing.md  (+23 more)
ferret-cli/: Cargo.toml
ferret-cli/src/: args.rs  color.rs  daemon.rs  estimate.rs  files.rs  init.rs  main.rs  paths.rs  preview.rs  reindex_display.rs  repo.rs  repos.rs  search_cmd.rs  status.rs  symbols.rs  web.rs  wire.rs
ferret-cli/src/mcp/: daemon_client.rs  errors.rs  formatter.rs  mod.rs  resources.rs  server.rs
ferret-cli/src/mcp/tools/: mod.rs
ferret-core/: Cargo.toml
ferret-core/examples/: bench_space.rs  build_index.rs  demo.rs
ferret-core/src/: catchup.rs  changes.rs  checkpoint.rs  codec.rs  content.rs  disk.rs  error.rs  git_diff.rs  grammar.rs  hash_diff.rs  highlight.rs  hybrid_detector.rs  index_reader.rs  index_state.rs  index_writer.rs  intersection.rs  lib.rs  metadata.rs  multi_search.rs  posting.rs  query.rs  query_match.rs  query_plan.rs  query_trigrams.rs  recovery.rs  registry.rs  search.rs  segment.rs  segment_manager.rs  symbol_extractor.rs  symbol_index.rs  tombstone.rs  tree_sitter_process.rs  trigram.rs  types.rs  walker.rs  watcher.rs
ferret-daemon/: Cargo.toml
ferret-daemon/src/: client.rs  json_protocol.rs  lib.rs  types.rs  wire.rs
ferret-web/: Cargo.toml  build.rs
ferret-web/src/: api.rs  error.rs  lib.rs  proxy.rs  sse.rs  static_files.rs  ui.rs
ferret-web/static/: app.js  style.css
ferret-web/templates/: base.html  file_preview.html  index.html  repos.html  symbol_results.html
indexrs-cli/: Cargo.toml
indexrs-cli/src/: args.rs  daemon.rs  estimate.rs  files.rs  init.rs  main.rs  output.rs  paths.rs  preview.rs  reindex_display.rs  repo.rs  repos.rs  search_cmd.rs  status.rs  symbols.rs  web.rs  wire.rs
indexrs-cli/src/mcp/: daemon_client.rs  errors.rs  formatter.rs  mod.rs  resources.rs  server.rs
indexrs-core/: Cargo.toml
indexrs-core/examples/: bench_space.rs  build_index.rs  demo.rs
indexrs-core/src/: binary.rs  catchup.rs  codec.rs  content.rs  error.rs  git_diff.rs  grammar.rs  hash_diff.rs  hybrid_detector.rs  index_reader.rs  index_state.rs  index_writer.rs  intersection.rs  lib.rs  metadata.rs  multi_search.rs  posting.rs  query.rs  query_plan.rs  query_trigrams.rs  ranking.rs  recovery.rs  reindex_progress.rs  search.rs  segment.rs  segment_manager.rs  symbol_extractor.rs  symbol_index.rs  tombstone.rs  types.rs  verify.rs  walker.rs
indexrs-daemon/: Cargo.toml
indexrs-daemon/src/: client.rs  json_protocol.rs  lib.rs  types.rs  wire.rs
indexrs-mcp/: Cargo.toml
indexrs-mcp/src/: daemon_client.rs  errors.rs  formatter.rs  main.rs  resources.rs  server.rs
indexrs-mcp/src/tools/: mod.rs
indexrs-web/: Cargo.toml
indexrs-web/src/: api.rs  lib.rs  sse.rs  static_files.rs  ui.rs
indexrs-web/static/: app.js  style.css
indexrs-web/templates/: file_preview.html  index.html  repos.html  search_results.html  symbol_outline.html
