[package]
name = "ferret-indexer-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ferret"
path = "src/main.rs"

[features]
default = ["mcp", "symbols"]
mcp = ["dep:rmcp", "dep:schemars", "dep:glob"]
symbols = ["ferret-indexer-core/symbols"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
globset = "0.4"
regex = "1"
libc = "0.2"
rayon = "1"
nu-ansi-term = "0.50"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
ferret-indexer-core = { path = "../ferret-core" }
ferret-indexer-daemon = { path = "../ferret-daemon" }
ferret-indexer-web = { path = "../ferret-web" }
zstd = "0.13"
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1", optional = true }
glob = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
