[package]
name = "ferret-indexer-core"
version = "0.1.0"
edition = "2024"

[features]
symbols = [
    "dep:tree-sitter",
    "dep:streaming-iterator",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-c",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-java",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
blake3 = "1"
memchr = "2"
zstd = "0.13"
regex = "1"
regex-syntax = "0.8"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
integer-encoding = "4"
rayon = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"


# tree-sitter (optional, behind "symbols" feature)
tree-sitter = { version = "0.24", optional = true }
streaming-iterator = { version = "0.1.9", optional = true }
tree-sitter-rust = { version = "0.23.3", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-c = { version = "0.23.4", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }

[dev-dependencies]
tempfile = "3"
