[package]
name = "indexrs-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "indexrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
globset = "0.4"
regex = "1"
libc = "0.2"
rayon = "1"
nu-ansi-term = "0.50"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexrs-core = { path = "../indexrs-core" }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
