[package]
name = "indexrs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
blake3 = "1"
zstd = "0.13"
regex = "1"
regex-syntax = "0.8"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.4"
integer-encoding = "4"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
