[package]
name = "indexrs-daemon"
version = "0.1.0"
edition = "2024"

[features]
default = ["symbols"]
symbols = ["indexrs-core/symbols"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time", "process"] }
indexrs-core = { path = "../indexrs-core" }
