[package]
name = "indexrs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.17", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexrs-core = { path = "../indexrs-core" }
indexrs-daemon = { path = "../indexrs-daemon" }

[dev-dependencies]
tempfile = "3"
