[package]
name = "indexrs-web"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["axum-0.8"] }
axum = "0.8"
indexrs-core = { path = "../indexrs-core" }
indexrs-daemon = { path = "../indexrs-daemon" }
mime_guess = "2.0.5"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "macros", "signal", "sync"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip"] }
tracing = "0.1.44"
